--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.10.3",
+    "@chakra-ui/react": "^2.10.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.11.5",
     "@gsap/react": "^2.1.1",
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.24.1",
     "remixicon": "^4.3.0",
     "sass": "^1.77.8",
