--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,10 @@
     "react-icons": "^5.3.0",
     "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.24.1",
+    "react-slick": "^0.30.2",
     "remixicon": "^4.3.0",
     "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
